Saved data to file

--- a/SDWA/SDWISData.ipynb
+++ b/SDWA/SDWISData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -680,7 +680,7 @@
        "9  FL6295268  20160000633            N"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "9  NJ0105333   2217            Y"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "4  GA2310025               1"
       ]
      },
-     "execution_count": 73,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to csv\n",
+    "vio_by_pws.to_csv(r'C:\\Users\\zstat\\Documents\\RecurseCenter\\EJ-analysis-map\\Data\\Created\\SDWIS\\vio_by_pws.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +976,7 @@
        "4  NJ0105323               1"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -977,6 +987,16 @@
     "health_vio_by_pws = health_vio_by_pws.reset_index().drop(columns='health_based')\n",
     "health_vio_by_pws = health_vio_by_pws.rename(columns={'VIOID': 'All_Violations'})\n",
     "health_vio_by_pws.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Save to csv\n",
+    "health_vio_by_pws.to_csv(r'C:\\Users\\zstat\\Documents\\RecurseCenter\\EJ-analysis-map\\Data\\Created\\SDWIS\\health_vio_by_pws.csv')"
    ]
   }
  ],
