--- a/SDWA/SDWISData.ipynb
+++ b/SDWA/SDWISData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "scrolled": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {
     "scrolled": false
    },
@@ -570,9 +570,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -680,7 +680,7 @@
        "9  FL6295268  20160000633            N"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "9  NJ0105333   2217            Y"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -884,7 +884,7 @@
        "4  GA2310025               1"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -899,7 +899,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -909,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +934,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>PWSID</th>\n",
-       "      <th>All_Violations</th>\n",
+       "      <th>Health_Violations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -968,15 +968,15 @@
        "</div>"
       ],
       "text/plain": [
-       "       PWSID  All_Violations\n",
-       "0  NJ0102301               1\n",
-       "1  NJ0104322               1\n",
-       "2  NJ0105301               1\n",
-       "3  NJ0105304               2\n",
-       "4  NJ0105323               1"
+       "       PWSID  Health_Violations\n",
+       "0  NJ0102301                  1\n",
+       "1  NJ0104322                  1\n",
+       "2  NJ0105301                  1\n",
+       "3  NJ0105304                  2\n",
+       "4  NJ0105323                  1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,13 +985,13 @@
     "# Summarize health-based violations per water system\n",
     "health_vio_by_pws = pd.pivot_table(health_pivot,index=['PWSID'],aggfunc='count')\n",
     "health_vio_by_pws = health_vio_by_pws.reset_index().drop(columns='health_based')\n",
-    "health_vio_by_pws = health_vio_by_pws.rename(columns={'VIOID': 'All_Violations'})\n",
+    "health_vio_by_pws = health_vio_by_pws.rename(columns={'VIOID': 'Health_Violations'})\n",
     "health_vio_by_pws.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
