Made small edits

--- a/SpatialAnalysis/ArealWeighting.ipynb
+++ b/SpatialAnalysis/ArealWeighting.ipynb
@@ -2940,95 +2940,8 @@
     }
    ],
    "source": [
-    "# Expoert to GeoJSON\n",
+    "# Export to GeoJSON\n",
     "PWS_agg_json.to_file(r'C:\\Users\\zstat\\Documents\\RecurseCenter\\EJ-analysis-map\\Data\\Created\\SpatialAnalysis\\ArealWeighting.json', driver='GeoJSON')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "test = gpd.read_file(r'C:\\Users\\zstat\\Documents\\RecurseCenter\\EJ-analysis-map\\Data\\Created\\SpatialAnalysis\\ArealWeighting.json')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id</th>\n",
-       "      <th>geometry</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>(POLYGON ((497860.4602464174 196288.4292888343...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1</td>\n",
-       "      <td>(POLYGON ((515752.6858546621 202163.5393238475...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>2</td>\n",
-       "      <td>(POLYGON ((358984.6680578727 246157.0587467105...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>3</td>\n",
-       "      <td>(POLYGON ((382017.3487498079 264208.1571022005...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>4</td>\n",
-       "      <td>(POLYGON ((383871.0728139255 228984.5435644306...</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   id                                           geometry\n",
-       "0   0  (POLYGON ((497860.4602464174 196288.4292888343...\n",
-       "1   1  (POLYGON ((515752.6858546621 202163.5393238475...\n",
-       "2   2  (POLYGON ((358984.6680578727 246157.0587467105...\n",
-       "3   3  (POLYGON ((382017.3487498079 264208.1571022005...\n",
-       "4   4  (POLYGON ((383871.0728139255 228984.5435644306..."
-      ]
-     },
-     "execution_count": 125,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "test.head()"
    ]
   }
  ],
