--- a/web-display/maps/data/data-prep.ipynb
+++ b/web-display/maps/data/data-prep.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AREALAND</th>\n",
+       "      <th>AREAWATER</th>\n",
+       "      <th>BASENAME</th>\n",
+       "      <th>CENTLAT</th>\n",
+       "      <th>CENTLON</th>\n",
+       "      <th>DIVISION</th>\n",
+       "      <th>FUNCSTAT</th>\n",
+       "      <th>GEOID</th>\n",
+       "      <th>INTPTLAT</th>\n",
+       "      <th>INTPTLON</th>\n",
+       "      <th>...</th>\n",
+       "      <th>NAME</th>\n",
+       "      <th>OBJECTID</th>\n",
+       "      <th>OID</th>\n",
+       "      <th>REGION</th>\n",
+       "      <th>STATE</th>\n",
+       "      <th>STATENS</th>\n",
+       "      <th>STGEOMETRY.AREA</th>\n",
+       "      <th>STGEOMETRY.LEN</th>\n",
+       "      <th>STUSAB</th>\n",
+       "      <th>geometry</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>19047645714</td>\n",
+       "      <td>3545040488</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>+40.1050485</td>\n",
+       "      <td>-074.6580423</td>\n",
+       "      <td>2</td>\n",
+       "      <td>A</td>\n",
+       "      <td>34</td>\n",
+       "      <td>+40.1072744</td>\n",
+       "      <td>-074.6652012</td>\n",
+       "      <td>...</td>\n",
+       "      <td>New Jersey</td>\n",
+       "      <td>15</td>\n",
+       "      <td>27457286138606</td>\n",
+       "      <td>1</td>\n",
+       "      <td>34</td>\n",
+       "      <td>01779795</td>\n",
+       "      <td>3.867718e+10</td>\n",
+       "      <td>1.095415e+06</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>POLYGON ((-75.18959999955153 40.59177599999373...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      AREALAND   AREAWATER    BASENAME      CENTLAT       CENTLON DIVISION  \\\n",
+       "0  19047645714  3545040488  New Jersey  +40.1050485  -074.6580423        2   \n",
+       "\n",
+       "  FUNCSTAT GEOID     INTPTLAT      INTPTLON  \\\n",
+       "0        A    34  +40.1072744  -074.6652012   \n",
+       "\n",
+       "                         ...                                NAME OBJECTID  \\\n",
+       "0                        ...                          New Jersey       15   \n",
+       "\n",
+       "              OID  REGION  STATE   STATENS STGEOMETRY.AREA STGEOMETRY.LEN  \\\n",
+       "0  27457286138606       1     34  01779795    3.867718e+10   1.095415e+06   \n",
+       "\n",
+       "   STUSAB                                           geometry  \n",
+       "0      NJ  POLYGON ((-75.18959999955153 40.59177599999373...  \n",
+       "\n",
+       "[1 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NJNJ_boundary.to_crs({'init': 'epsg:4326'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -76,30 +183,50 @@
    ],
    "source": [
     "# Save file as GeoJSON\n",
-    "NJ_boundary.to_file('NJ_boundary.json', driver='GeoJSON')"
+    "NJ_boundary.to_file('NJ_boundary.geojson', driver='GeoJSON')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
-    "NJ = gpd.read_file('NJ_boundary.json')"
+    "NJ = gpd.read_file('NJ_boundary.geojson')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x151db8dac18>"
+       "{'init': 'epsg:3857'}"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "NJ.crs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1dab06916d8>"
+      ]
+     },
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -119,6 +246,13 @@
    "source": [
     "NJ.plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
