modified notebook analyzing SDWA data

--- a/SDWA-data-prep/SDWISData.ipynb
+++ b/SDWA-data-prep/SDWISData.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -318,7 +318,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -570,7 +570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {
     "scrolled": false
    },
@@ -680,7 +680,7 @@
        "9  FL6295268  20160000633            N"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -694,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +802,7 @@
        "9  NJ0105333   2217            Y"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -817,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -842,7 +842,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>PWSID</th>\n",
-       "      <th>All_Violations</th>\n",
+       "      <th>all_violations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -876,7 +876,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       PWSID  All_Violations\n",
+       "       PWSID  all_violations\n",
        "0  CT0320044               1\n",
        "1  CT0347031               1\n",
        "2  FL3424829               1\n",
@@ -884,7 +884,7 @@
        "4  GA2310025               1"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -893,23 +893,13 @@
     "# Summarize total violations per water system\n",
     "vio_by_pws = pd.pivot_table(pivot,index=['PWSID'],aggfunc='count')\n",
     "vio_by_pws = vio_by_pws.reset_index().drop(columns='health_based')\n",
-    "vio_by_pws = vio_by_pws.rename(columns={'VIOID': 'All_Violations'})\n",
+    "vio_by_pws = vio_by_pws.rename(columns={'VIOID': 'all_violations'})\n",
     "vio_by_pws.head(5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Save to csv\n",
-    "vio_by_pws.to_csv(r'C:\\Users\\zstat\\Documents\\RecurseCenter\\EJ-analysis-map\\Data\\Created\\SDWIS\\vio_by_pws.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +924,7 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>PWSID</th>\n",
-       "      <th>Health_Violations</th>\n",
+       "      <th>health_violations</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -968,7 +958,7 @@
        "</div>"
       ],
       "text/plain": [
-       "       PWSID  Health_Violations\n",
+       "       PWSID  health_violations\n",
        "0  NJ0102301                  1\n",
        "1  NJ0104322                  1\n",
        "2  NJ0105301                  1\n",
@@ -976,7 +966,7 @@
        "4  NJ0105323                  1"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -985,8 +975,18 @@
     "# Summarize health-based violations per water system\n",
     "health_vio_by_pws = pd.pivot_table(health_pivot,index=['PWSID'],aggfunc='count')\n",
     "health_vio_by_pws = health_vio_by_pws.reset_index().drop(columns='health_based')\n",
-    "health_vio_by_pws = health_vio_by_pws.rename(columns={'VIOID': 'Health_Violations'})\n",
+    "health_vio_by_pws = health_vio_by_pws.rename(columns={'VIOID': 'health_violations'})\n",
     "health_vio_by_pws.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Merge tables into one datasets\n",
+    "sdwa_vios = pd.merge(vio_by_pws, health_vio_by_pws, how='outer', on='PWSID')"
    ]
   },
   {
@@ -995,8 +995,171 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Save to csv\n",
-    "health_vio_by_pws.to_csv(r'C:\\Users\\zstat\\Documents\\RecurseCenter\\EJ-analysis-map\\Data\\Created\\SDWIS\\health_vio_by_pws.csv')"
+    "# Convert null values to 0\n",
+    "sdwa_vios.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 1423 entries, 0 to 1422\n",
+      "Data columns (total 3 columns):\n",
+      "PWSID                1423 non-null object\n",
+      "all_violations       1423 non-null int64\n",
+      "health_violations    1423 non-null float64\n",
+      "dtypes: float64(1), int64(1), object(1)\n",
+      "memory usage: 44.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "sdwa_vios.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Convert Health_Violations field type to int64 to match All_Violations field type\n",
+    "sdwa_vios['health_violations'] = sdwa_vios['health_violations'].astype('int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PWSID</th>\n",
+       "      <th>all_violations</th>\n",
+       "      <th>health_violations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CT0320044</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CT0347031</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FL3424829</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FL6295268</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GA2310025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>LA1019085</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>ME0000802</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>ME0094466</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>NJ0102001</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>NJ0102301</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       PWSID  all_violations  health_violations\n",
+       "0  CT0320044               1                  0\n",
+       "1  CT0347031               1                  0\n",
+       "2  FL3424829               1                  0\n",
+       "3  FL6295268              12                  0\n",
+       "4  GA2310025               1                  0\n",
+       "5  LA1019085               1                  0\n",
+       "6  ME0000802               2                  0\n",
+       "7  ME0094466               2                  0\n",
+       "8  NJ0102001               6                  0\n",
+       "9  NJ0102301               2                  1"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Confirm dataset looks good\n",
+    "sdwa_vios.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sdwa_vios.to_csv('..\\Data\\Created\\SDWIS\\sdwa_vios.csv', index=False)"
    ]
   }
  ],
