finished modifying urban and rural anlysis

--- a/spatial-analysis/UrbanRural.ipynb
+++ b/spatial-analysis/UrbanRural.ipynb
@@ -456,7 +456,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 90,
    "metadata": {},
    "outputs": [
     {
@@ -523,7 +523,7 @@
        "4  NJ0325001       rural"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 90,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -536,20 +536,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Export to csv\n",
-    "pws_urban_rural.to_csv('..\\Data\\Created\\SpatialAnalysis\\pws_urban_rural.csv')"
+    "pws_urban_rural.to_csv('..\\Data\\Created\\SpatialAnalysis\\pws_urban_rural.csv', index = False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
