Created a file with the areal weighting results and all necessary variables

--- a/spatial-analysis/ArealWeighting.ipynb
+++ b/spatial-analysis/ArealWeighting.ipynb
@@ -3100,24 +3100,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 233,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 574 entries, 0 to 573\n",
-      "Data columns (total 3 columns):\n",
-      "Unnamed: 0     574 non-null int64\n",
-      "PWID           574 non-null object\n",
-      "urban_rural    574 non-null object\n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 13.5+ KB\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Open urban/rural file\n",
     "pws_urban_rural = pd.read_csv('..\\Data\\Created\\SpatialAnalysis\\pws_urban_rural.csv')"
@@ -3125,7 +3110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 217,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -3149,12 +3134,11 @@
       "\n",
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 574 entries, 0 to 573\n",
-      "Data columns (total 3 columns):\n",
-      "Unnamed: 0     574 non-null int64\n",
+      "Data columns (total 2 columns):\n",
       "PWID           574 non-null object\n",
       "urban_rural    574 non-null object\n",
-      "dtypes: int64(1), object(2)\n",
-      "memory usage: 13.5+ KB\n",
+      "dtypes: object(2)\n",
+      "memory usage: 9.0+ KB\n",
       "None\n"
      ]
     }
@@ -3167,7 +3151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 224,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -3290,15 +3274,307 @@
        "4       rural  "
       ]
      },
-     "execution_count": 224,
+     "execution_count": 235,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Join urban and rural data to the areal weighting results\n",
-    "aw_pws = areal_weighting_pws.merge(pws_urban_rural.drop(columns=\"Unnamed: 0\"), on='PWID')\n",
+    "aw_pws = areal_weighting_pws.merge(pws_urban_rural, on='PWID')\n",
     "aw_pws.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Join the SDWA violation data and export to a GeoJSON for analysis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 237,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PWID</th>\n",
+       "      <th>all_violations</th>\n",
+       "      <th>health_violations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>CT0320044</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>CT0347031</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>FL3424829</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>FL6295268</td>\n",
+       "      <td>12</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>GA2310025</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        PWID  all_violations  health_violations\n",
+       "0  CT0320044               1                  0\n",
+       "1  CT0347031               1                  0\n",
+       "2  FL3424829               1                  0\n",
+       "3  FL6295268              12                  0\n",
+       "4  GA2310025               1                  0"
+      ]
+     },
+     "execution_count": 237,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sdwa_vios = pd.read_csv('..\\Data\\Created\\SDWIS\\sdwa_vios.csv')\n",
+    "sdwa_vios = sdwa_vios.rename(columns={'PWSID': \"PWID\"})\n",
+    "sdwa_vios.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 247,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Join the two datasets\n",
+    "aw_pws_sdwa = pd.merge(aw_pws, sdwa_vios, on=\"PWID\", \n",
+    "                       how=\"left\", validate=\"one_to_one\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 249,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Replace all null values with 0 since if there isn't violation data that means\n",
+    "# the water system did not recieve a violation\n",
+    "aw_pws_sdwa.fillna(0, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 253,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>PWID</th>\n",
+       "      <th>PWS_area</th>\n",
+       "      <th>PWS_total_</th>\n",
+       "      <th>PWS_pov_po</th>\n",
+       "      <th>PWS_POC_po</th>\n",
+       "      <th>perc_pov</th>\n",
+       "      <th>perc_POC</th>\n",
+       "      <th>geometry</th>\n",
+       "      <th>urban_rural</th>\n",
+       "      <th>all_violations</th>\n",
+       "      <th>health_violations</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NJ0102001</td>\n",
+       "      <td>1.502353e+08</td>\n",
+       "      <td>28422.774066</td>\n",
+       "      <td>11778.005065</td>\n",
+       "      <td>24513.210106</td>\n",
+       "      <td>0.414386</td>\n",
+       "      <td>0.862450</td>\n",
+       "      <td>(POLYGON ((497860.4602464174 196288.4292888343...</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>NJ0103001</td>\n",
+       "      <td>7.377988e+07</td>\n",
+       "      <td>2626.482642</td>\n",
+       "      <td>305.691512</td>\n",
+       "      <td>368.488183</td>\n",
+       "      <td>0.116388</td>\n",
+       "      <td>0.140297</td>\n",
+       "      <td>(POLYGON ((515752.6858546621 202163.5393238475...</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NJ0104003</td>\n",
+       "      <td>1.045117e+08</td>\n",
+       "      <td>1975.369923</td>\n",
+       "      <td>211.360809</td>\n",
+       "      <td>678.052804</td>\n",
+       "      <td>0.106998</td>\n",
+       "      <td>0.343254</td>\n",
+       "      <td>(POLYGON ((358984.6680578727 246157.0587467105...</td>\n",
+       "      <td>urban</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NJ0105001</td>\n",
+       "      <td>4.075818e+05</td>\n",
+       "      <td>2.633283</td>\n",
+       "      <td>0.355535</td>\n",
+       "      <td>0.650936</td>\n",
+       "      <td>0.135016</td>\n",
+       "      <td>0.247196</td>\n",
+       "      <td>(POLYGON ((382017.3487498079 264208.1571022005...</td>\n",
+       "      <td>rural</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>NJ0105002</td>\n",
+       "      <td>8.502179e+05</td>\n",
+       "      <td>5.493043</td>\n",
+       "      <td>0.741649</td>\n",
+       "      <td>1.357856</td>\n",
+       "      <td>0.135016</td>\n",
+       "      <td>0.247196</td>\n",
+       "      <td>(POLYGON ((383871.0728139255 228984.5435644306...</td>\n",
+       "      <td>rural</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        PWID      PWS_area    PWS_total_    PWS_pov_po    PWS_POC_po  \\\n",
+       "0  NJ0102001  1.502353e+08  28422.774066  11778.005065  24513.210106   \n",
+       "1  NJ0103001  7.377988e+07   2626.482642    305.691512    368.488183   \n",
+       "2  NJ0104003  1.045117e+08   1975.369923    211.360809    678.052804   \n",
+       "3  NJ0105001  4.075818e+05      2.633283      0.355535      0.650936   \n",
+       "4  NJ0105002  8.502179e+05      5.493043      0.741649      1.357856   \n",
+       "\n",
+       "   perc_pov  perc_POC                                           geometry  \\\n",
+       "0  0.414386  0.862450  (POLYGON ((497860.4602464174 196288.4292888343...   \n",
+       "1  0.116388  0.140297  (POLYGON ((515752.6858546621 202163.5393238475...   \n",
+       "2  0.106998  0.343254  (POLYGON ((358984.6680578727 246157.0587467105...   \n",
+       "3  0.135016  0.247196  (POLYGON ((382017.3487498079 264208.1571022005...   \n",
+       "4  0.135016  0.247196  (POLYGON ((383871.0728139255 228984.5435644306...   \n",
+       "\n",
+       "  urban_rural  all_violations  health_violations  \n",
+       "0       urban             6.0                0.0  \n",
+       "1       urban            16.0                0.0  \n",
+       "2       urban             0.0                0.0  \n",
+       "3       rural             0.0                0.0  \n",
+       "4       rural             1.0                0.0  "
+      ]
+     },
+     "execution_count": 253,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# In order to export to a GeoJSON, I need to first upcast everything into the \n",
+    "# \"multi-polygon\" type\n",
+    "\n",
+    "from shapely import geometry\n",
+    "upcast_dispatch = {geometry.Point: geometry.MultiPoint, \n",
+    "                   geometry.LineString: geometry.MultiLineString, \n",
+    "                   geometry.Polygon: geometry.MultiPolygon}\n",
+    "\n",
+    "def maybe_cast_to_multigeometry(geom):\n",
+    "    caster = upcast_dispatch.get(type(geom), lambda x: x[0])\n",
+    "    return caster([geom])\n",
+    "\n",
+    "aw_pws_sdwa['geometry'] = aw_pws_sdwa.geometry.apply(maybe_cast_to_multigeometry)\n",
+    "aw_pws_sdwa.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\zstat\\Anaconda2\\envs\\py36\\lib\\site-packages\\geopandas\\io\\file.py:108: FionaDeprecationWarning: Use fiona.Env() instead.\n",
+      "  with fiona.drivers():\n"
+     ]
+    }
+   ],
+   "source": [
+    "aw_pws_sdwa.to_file('..\\Data\\Created\\SpatialAnalysis\\AW_vios.geojson', driver='GeoJSON')"
    ]
   },
   {
